# photos

./: .gitignore  CMakeLists.txt
src/: application.cpp  application.h  loader.cpp  loader.h  main.cpp  main.h  pch.h  utils.cpp  utils.h
